package edu.iuh.fit.Bai3;

// ==================== DECORATOR PATTERN ====================
// Component interface - Thành phần cơ bản của đơn hàng
public interface OrderComponent {
    String getDescription();
    double getCost();
}

